--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,9 @@
 # Build and Release Folders
 bin-debug/
 bin-release/
-starling/doc/html/
 bin/*.*
+dist
+bin
 
 # Project property files
 .settings/
@@ -12,3 +13,30 @@ bin/*.*
 
 # Windows
 Thumbs.db
+
+# User-specific stuff:
+.idea/workspace.xml
+.idea/tasks.xml
+.idea/dictionaries
+.idea/vcs.xml
+.idea/jsLibraryMappings.xml
+
+# Sensitive or high-churn files:
+.idea/dataSources.ids
+.idea/dataSources.xml
+.idea/dataSources.local.xml
+.idea/sqlDataSources.xml
+.idea/dynamic.xml
+.idea/uiDesigner.xml
+
+# Gradle:
+.idea/gradle.xml
+.idea/libraries
+
+## File-based project format:
+*.iws
+
+## Plugin-specific files:
+
+# IntelliJ
+/out/
