--- a/.gitignore
+++ b/.gitignore
@@ -14,29 +14,11 @@ bin
 # Windows
 Thumbs.db
 
-# User-specific stuff:
-.idea/workspace.xml
-.idea/tasks.xml
-.idea/dictionaries
-.idea/vcs.xml
-.idea/jsLibraryMappings.xml
-
-# Sensitive or high-churn files:
-.idea/dataSources.ids
-.idea/dataSources.xml
-.idea/dataSources.local.xml
-.idea/sqlDataSources.xml
-.idea/dynamic.xml
-.idea/uiDesigner.xml
-
-# Gradle:
-.idea/gradle.xml
-.idea/libraries
-
 ## File-based project format:
 *.iws
 
 ## Plugin-specific files:
 
-# IntelliJ
+# IDEA
 /out/
+/.idea
